# simhospital

./: .gitignore  WORKSPACE  go.mod  go.sum  repositories.bzl
cmd/simulator/: BUILD.bazel
pkg/clock/: BUILD.bazel
pkg/config/: BUILD.bazel
pkg/constants/: BUILD.bazel
pkg/doctor/: BUILD.bazel
pkg/files/: BUILD.bazel
pkg/gender/: BUILD.bazel
pkg/generator/: BUILD.bazel
pkg/generator/address/: BUILD.bazel
pkg/generator/codedelement/: BUILD.bazel
pkg/generator/document/: BUILD.bazel
pkg/generator/header/: BUILD.bazel
pkg/generator/id/: BUILD.bazel
pkg/generator/names/: BUILD.bazel
pkg/generator/notes/: BUILD.bazel
pkg/generator/order/: BUILD.bazel
pkg/generator/person/: BUILD.bazel
pkg/generator/text/: BUILD.bazel
pkg/hardcoded/: BUILD.bazel
pkg/hl7/: BUILD.bazel  parser.go
pkg/hospital/: BUILD.bazel  simulated_hospital_test.go
pkg/hospital/runner/: BUILD.bazel
pkg/hospital/runner/authentication/: BUILD.bazel
pkg/ir/: BUILD.bazel
pkg/location/: BUILD.bazel
pkg/logging/: BUILD.bazel  logging_source_test.go
pkg/message/: BUILD.bazel
pkg/monitoring/: BUILD.bazel
pkg/orderprofile/: BUILD.bazel
pkg/pathway/: BUILD.bazel
pkg/processor/: BUILD.bazel
pkg/rate/: BUILD.bazel
pkg/resource/: BUILD.bazel
pkg/resource/cloud/: BUILD.bazel
pkg/sample/: BUILD.bazel
pkg/starter/: BUILD.bazel
pkg/state/: BUILD.bazel
pkg/state/persist/: BUILD.bazel
pkg/test/: BUILD.bazel
pkg/test/testaddress/: BUILD.bazel
pkg/test/testclock/: BUILD.bazel
pkg/test/testdate/: BUILD.bazel
pkg/test/testhl7/: BUILD.bazel
pkg/test/testhospital/: BUILD.bazel
pkg/test/testid/: BUILD.bazel
pkg/test/testlocation/: BUILD.bazel
pkg/test/testmetrics/: BUILD.bazel
pkg/test/testnotes/: BUILD.bazel
pkg/test/testperson/: BUILD.bazel
pkg/test/testresource/: BUILD.bazel
pkg/test/teststate/: BUILD.bazel
pkg/test/testtext/: BUILD.bazel
pkg/test/testwrite/: BUILD.bazel
