# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "config",
    srcs = [
        "csv.go",
        "data.go",
        "hl7.go",
        "mapping.go",
        "names.go",
        "notes.go",
    ],
    importpath = "github.com/google/simhospital/pkg/config",
    deps = [
        "//pkg/files",
        "//pkg/ir",
        "//pkg/logging",
        "//pkg/sample",
        "@com_github_pkg_errors//:errors",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "config_test",
    srcs = [
        "data_test.go",
        "hl7_test.go",
        "notes_test.go",
    ],
    embed = [":config"],
    deps = [
        "//pkg/ir",
        "//pkg/sample",
        "//pkg/test/testwrite",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
