# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "generator",
    srcs = [
        "generator.go",
        "patient_class.go",
    ],
    importpath = "github.com/google/simhospital/pkg/generator",
    deps = [
        "//pkg/clock",
        "//pkg/config",
        "//pkg/doctor",
        "//pkg/gender",
        "//pkg/generator/address",
        "//pkg/generator/codedelement",
        "//pkg/generator/document",
        "//pkg/generator/header",
        "//pkg/generator/id",
        "//pkg/generator/names",
        "//pkg/generator/notes",
        "//pkg/generator/order",
        "//pkg/generator/person",
        "//pkg/generator/text",
        "//pkg/ir",
        "//pkg/logging",
        "//pkg/message",
        "//pkg/orderprofile",
        "//pkg/pathway",
        "//pkg/sample",
        "//pkg/state",
    ],
)

go_test(
    name = "generator_test",
    srcs = ["generator_test.go"],
    embed = [":generator"],
    deps = [
        "//pkg/config",
        "//pkg/constants",
        "//pkg/doctor",
        "//pkg/generator/codedelement",
        "//pkg/generator/header",
        "//pkg/ir",
        "//pkg/orderprofile",
        "//pkg/pathway",
        "//pkg/state",
        "//pkg/test",
        "//pkg/test/testaddress",
        "//pkg/test/testclock",
        "//pkg/test/testdate",
        "//pkg/test/testid",
        "//pkg/test/testperson",
        "//pkg/test/testwrite",
        "@com_github_google_go_cmp//cmp",
    ],
)
