# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "hardcoded",
    srcs = ["message.go"],
    importpath = "github.com/google/simhospital/pkg/hardcoded",
    deps = [
        "//pkg/files",
        "//pkg/generator/header",
        "//pkg/hl7",
        "//pkg/ir",
        "//pkg/logging",
        "//pkg/message",
        "@com_github_pkg_errors//:errors",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "hardcoded_test",
    srcs = [
        "message_test.go",
        "prod_message_test.go",
    ],
    embed = [":hardcoded"],
    deps = [
        "//pkg/generator/header",
        "//pkg/hl7",
        "//pkg/ir",
        "//pkg/message",
        "//pkg/test",
        "//pkg/test/testwrite",
        "@com_github_google_go_cmp//cmp",
    ],
)
