# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "hospital",
    srcs = [
        "event_types.go",
        "events.go",
        "messages.go",
        "simulated_hospital.go",
    ],
    importpath = "github.com/google/simhospital/pkg/hospital",
    deps = [
        "//pkg/clock",
        "//pkg/config",
        "//pkg/constants",
        "//pkg/doctor",
        "//pkg/generator",
        "//pkg/generator/header",
        "//pkg/generator/id",
        "//pkg/generator/person",
        "//pkg/hardcoded",
        "//pkg/hl7",
        "//pkg/ir",
        "//pkg/location",
        "//pkg/logging",
        "//pkg/message",
        "//pkg/monitoring",
        "//pkg/orderprofile",
        "//pkg/pathway",
        "//pkg/processor",
        "//pkg/resource",
        "//pkg/resource/cloud",
        "//pkg/state",
        "//pkg/state/persist",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)

go_test(
    name = "hospital_test",
    srcs = [
        "resources_test.go",
        "simulated_hospital_test.go",
    ],
    deps = [
        ":hospital",
        "//pkg/constants",
        "//pkg/generator/header",
        "//pkg/hardcoded",
        "//pkg/hl7",
        "//pkg/ir",
        "//pkg/logging",
        "//pkg/message",
        "//pkg/pathway",
        "//pkg/processor",
        "//pkg/state",
        "//pkg/state/persist",
        "//pkg/test",
        "//pkg/test/testhl7",
        "//pkg/test/testhospital",
        "//pkg/test/testlocation",
        "//pkg/test/testmetrics",
        "//pkg/test/testresource",
        "//pkg/test/teststate",
        "//pkg/test/testwrite",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
