# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "orderprofile",
    srcs = [
        "order_profile.go",
        "value.go",
        "value_generator.go",
    ],
    importpath = "github.com/google/simhospital/pkg/orderprofile",
    deps = [
        "//pkg/config",
        "//pkg/constants",
        "//pkg/files",
        "//pkg/ir",
        "//pkg/logging",
        "@com_github_pkg_errors//:errors",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "orderprofile_test",
    srcs = [
        "order_profile_test.go",
        "value_generator_test.go",
        "value_test.go",
    ],
    embed = [":orderprofile"],
    deps = [
        "//pkg/config",
        "//pkg/constants",
        "//pkg/ir",
        "//pkg/test",
        "//pkg/test/testwrite",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
