# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "pathway",
    srcs = [
        "collection.go",
        "deterministic_manager.go",
        "distribution_manager.go",
        "manager.go",
        "parser.go",
        "pathway.go",
        "validators.go",
    ],
    importpath = "github.com/google/simhospital/pkg/pathway",
    deps = [
        "//pkg/clock",
        "//pkg/constants",
        "//pkg/doctor",
        "//pkg/files",
        "//pkg/ir",
        "//pkg/location",
        "//pkg/logging",
        "//pkg/orderprofile",
        "//pkg/sample",
        "@com_github_pkg_errors//:errors",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "pathway_test",
    srcs = [
        "collection_test.go",
        "deterministic_manager_test.go",
        "distribution_manager_test.go",
        "parser_test.go",
        "pathway_test.go",
        "prod_pathway_test.go",
        "validators_test.go",
    ],
    embed = [":pathway"],
    deps = [
        "//pkg/config",
        "//pkg/constants",
        "//pkg/doctor",
        "//pkg/ir",
        "//pkg/location",
        "//pkg/orderprofile",
        "//pkg/test",
        "//pkg/test/testclock",
        "//pkg/test/testlocation",
        "//pkg/test/testwrite",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_pkg_errors//:errors",
    ],
)
