# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "starter",
    srcs = ["pathway_starter.go"],
    importpath = "github.com/google/simhospital/pkg/starter",
    deps = [
        "//pkg/hl7",
        "//pkg/hospital",
        "//pkg/ir",
        "//pkg/logging",
        "//pkg/pathway",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "starter_test",
    srcs = ["pathway_starter_test.go"],
    deps = [
        ":starter",
        "//pkg/config",
        "//pkg/doctor",
        "//pkg/hl7",
        "//pkg/hospital",
        "//pkg/location",
        "//pkg/logging",
        "//pkg/orderprofile",
        "//pkg/pathway",
        "//pkg/test",
        "//pkg/test/testclock",
        "//pkg/test/testhl7",
        "//pkg/test/testhospital",
        "//pkg/test/testlocation",
        "//pkg/test/testwrite",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
