# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "codedelement",
    srcs = [
        "allergy.go",
        "coded_element.go",
        "diagnosis_procedures.go",
    ],
    importpath = "github.com/google/simhospital/pkg/generator/codedelement",
    deps = [
        "//pkg/clock",
        "//pkg/config",
        "//pkg/constants",
        "//pkg/ir",
        "//pkg/pathway",
        "//pkg/sample",
        "@com_google_fhir//proto/google/fhir/proto/r4/core:codes_go_proto",
    ],
)

go_test(
    name = "codedelement_test",
    srcs = [
        "allergy_test.go",
        "coded_element_test.go",
        "diagnosis_procedures_test.go",
    ],
    embed = [":codedelement"],
    deps = [
        "//pkg/config",
        "//pkg/ir",
        "//pkg/pathway",
        "//pkg/test",
        "//pkg/test/testclock",
        "//pkg/test/testdate",
        "//pkg/test/testwrite",
        "@com_github_google_go_cmp//cmp",
        "@com_google_fhir//proto/google/fhir/proto/r4/core:codes_go_proto",
    ],
)
