# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "person",
    srcs = [
        "ethnicity.go",
        "person.go",
    ],
    importpath = "github.com/google/simhospital/pkg/generator/person",
    deps = [
        "//pkg/clock",
        "//pkg/config",
        "//pkg/gender",
        "//pkg/generator/id",
        "//pkg/generator/names",
        "//pkg/ir",
        "//pkg/pathway",
        "//pkg/sample",
    ],
)

go_test(
    name = "person_test",
    srcs = [
        "ethnicity_test.go",
        "person_test.go",
    ],
    embed = [":person"],
    deps = [
        "//pkg/config",
        "//pkg/constants",
        "//pkg/gender",
        "//pkg/generator/names",
        "//pkg/ir",
        "//pkg/pathway",
        "//pkg/test",
        "//pkg/test/testclock",
        "//pkg/test/testid",
        "//pkg/test/testperson",
        "//pkg/test/testwrite",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
    ],
)
