# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "runner",
    srcs = ["runner.go"],
    importpath = "github.com/google/simhospital/pkg/hospital/runner",
    deps = [
        "//pkg/clock",
        "//pkg/hospital",
        "//pkg/hospital/runner/authentication",
        "//pkg/logging",
        "//pkg/monitoring",
        "//pkg/rate",
        "//pkg/starter",
        "@com_github_gorilla_mux//:mux",
        "@com_github_pkg_errors//:errors",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "runner_test",
    srcs = ["runner_test.go"],
    deps = [
        ":runner",
        "//pkg/hl7",
        "//pkg/hospital",
        "//pkg/test/testclock",
        "//pkg/test/testhospital",
        "//pkg/test/testwrite",
    ],
)
